alguns componentes funfando

--- a/debug.html
+++ b/debug.html
@@ -25,9 +25,38 @@
 </head>
 
     <body>
-		<div id="root"></div>
+
+      <div id="page-container">      
+
+        <div id="page-navbar"></div>
+
+        <div class="content-wrap">
+
+		  <div class="container">
+          	<div id="card-photo-sample"></div>
+          </div>
+          <div class="container">
+ 		  	<div id="card-float-left-sample"></div>
+ 		  </div>
+          <div class="container">
+ 		  	<div id="card-float-right-sample"></div>
+ 		  </div>
+          <div class="container">
+ 		  	<div id="card-carousel-sample"></div>
+ 		  </div> 		  
+
+ 		  
+
+        </div>
+      </div>
+
+
+
 		<script type="text/babel" src="src/components/NavbarLeft1.jsx"></script>
-		<script type="text/babel" src="src/components/PageContainer1.jsx"></script>
+		<script type="text/babel" src="src/components/CardPhoto.jsx"></script>
+		<script type="text/babel" src="src/components/CardFloatLeft.jsx"></script>
+		<script type="text/babel" src="src/components/CardFloatRight.jsx"></script>
+		<script type="text/babel" src="src/components/CardCarousel.jsx"></script>
 		<script type="text/babel" src="src/main.jsx"></script>
 
 <!--
