--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
       <meta http-equiv = "refresh" content = "0; url =./en/index.html" />
    </head>
    <body>
-      <p>Hello HTML5!</p>
+      <p>redirecting...</p>
    </body>
 </html>
